# homeAssistant-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run_calendar_migration.py  run_init_sql.py
.cursor/rules/: calendar-agent.mdc  coding.mdc  git.mdc  product.mdc  project.mdc  security.mdc
docs/: SERVICES_CONFIGURATION.md  TECHNICAL_DEBT.md
docs/architecture/: threat-model.md
docs/architecture/decisions/: 001-multi-tenancy-strategy.md
docs/prompts/: calendar-agent.md  finance-agent.md  qa-agent.md  router-agent.md
scripts/: check_db.py  clean_dev_db.py  generate_service_token.js  generate_service_token.py  reset_oauth_users.py  run_migration.py  run_psql_reset.ps1
scripts/db/: 002_calendar_google_integration.sql  003_agent_admin.sql  004_increase_phone_length.sql  005_1_migrate_current_user.sql  005_multitenancy.sql  006_quality_issues.sql  007_qa_reviews.sql  007_subscriptions_coupons_pricing.sql  008_plan_services.sql  009_user_model.sql  010_admin_insight.sql  011_fix_status.sql  012_pending_registrations.sql  013_nullable_tenant_interactions.sql  014_nullable_tenant_onboarding.sql  014_nullable_tenant_quality_issues.sql  015_onboarding_flow_restructure.sql  016_starter_paid.sql  017_fix_shopping_items_schema.sql  018_user_agent_onboarding.sql  019_pending_registration_email.sql  020_finance_hierarchy_incomes.sql  021_unify_calendar_reminder_agenda.sql  022_add_conversation_summary.sql  init.sql  reset_oauth_users.sql
scripts/db/migrations/: 002_add_chat_tables.sql  003_migrate_mp_to_lemonsqueezy.sql
src/app/: __init__.py  main.py
src/app/config/: __init__.py  database.py  lemonsqueezy.py  mercadopago.py  settings.py
src/app/middleware/: auth.py  correlation.py
src/app/repositories/: __init__.py  admin.py  agent_onboarding.py  calendar.py  coupon.py  finance.py  onboarding.py  pending_registration.py  plan_pricing.py  reminders.py  subscription.py
src/app/routers/: __init__.py  access.py  admin.py  auth.py  calendar.py  coupons.py  finance.py  health.py  migration.py  onboarding.py  plans.py  reminders.py  subscriptions.py  tenants.py
src/app/schemas/: __init__.py  access.py  admin.py  auth.py  calendar.py  common.py  coupon.py  finance.py  (+5 more)
tests/: __init__.py  test_access_policy.py  test_access_router.py  test_finance_agent_service.py  test_health.py  test_onboarding_web_link_tokens.py
(+13 files in other folders)
